--- a/wercker.yml
+++ b/wercker.yml
@@ -5,6 +5,12 @@ build:
       name: setup
       code: |
         apt-get install -y nodejs npm
+        npm cache clean
+        npm install n -g
+        n stable
+        ln -sf /usr/local/bin/node /usr/bin/node
+        node -v
+        apt-get purge -y nodejs npm
     - script:
       name: build
       code: |
