--- a/wercker.yml
+++ b/wercker.yml
@@ -4,7 +4,7 @@ build:
     - script:
       name: setup
       code: |
-        apt-get install -y git
+        type git
     - script:
       name: build
       code: |
