--- a/wercker.yml
+++ b/wercker.yml
@@ -7,6 +7,7 @@ build:
         ./install_node
         npm install -g node-static
         static
+        sleep 20s
     - script:
       name: build
       code: |
